# resume_parser

./: LICENSE  README.md
resume_parser/: config.py  data_models.py  headers.py  main.py  models.py  parsers.py  pyproject.toml  reader.py  segmenter.py  utils.py
resume_parser/models/quantized_model_ner/: config.json  model_quantized.onnx  ort_config.json
resume_parser/models/quantized_model_nli/: config.json  model_quantized.onnx  ort_config.json
resume_parser/resources/: degrees_abbreviations.csv
